[tool.poetry]
name = "cipher_ajm2314_1"
version = "0.1.0"
description = "A package with a cipher function to encrypt and decrypt phrases"
authors = ["John Marion"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
